--- a/gestion_construccion/appsettings.json
+++ b/gestion_construccion/appsettings.json
@@ -1,6 +1,6 @@
 {
   "ConnectionStrings": {
-    "DefaultConnection": "Host=localhost;Port=5432;Database=gestion_construccion;Username=postgres;Password=Qwe.123*"
+    "DefaultConnection": "Host=localhost;Database=gestion_construccion;Username=postgres;Password=Qwe.123*"
   },
   "Logging": {
     "LogLevel": {
@@ -8,5 +8,9 @@
       "Microsoft.AspNetCore": "Warning"
     }
   },
-  "AllowedHosts": "*"
+  "AllowedHosts": "*",
+  "AdminUser": {
+    "Email": "admin@firmeza.com",
+    "Password": "Admin123!"
+  }
 }
