--- a/gestion_construccion.web/appsettings.json
+++ b/gestion_construccion.web/appsettings.json
@@ -12,5 +12,13 @@
   "AdminUser": {
     "Email": "admin@firmeza.com",
     "Password": "Admin123!"
+  },
+  "SmtpSettings": {
+    "Server": "smtp.gmail.com",
+    "Port": 587,
+    "SenderName": "Firmeza Construcción",
+    "SenderEmail": "TU_EMAIL_DE_GMAIL@gmail.com",
+    "Username": "TU_EMAIL_DE_GMAIL@gmail.com",
+    "Password": "TU_CONTRASEÑA_DE_APLICACION"
   }
 }
