--- a/gestion_construcion.api/appsettings.json
+++ b/gestion_construcion.api/appsettings.json
@@ -8,5 +8,10 @@
       "Microsoft.AspNetCore": "Warning"
     }
   },
-  "AllowedHosts": "*"
+  "AllowedHosts": "*",
+  "Jwt": {
+    "Key": "ESTA_ES_MI_CLAVE_SECRETA_SUPER_LARGA_Y_COMPLEJA_PARA_FIRMAR_TOKENS_JWT_DEBE_TENER_AL_MENOS_32_CARACTERES",
+    "Issuer": "FirmezaAPI",
+    "Audience": "FirmezaClientes"
+  }
 }
