--- a/gestion_construccion.web/appsettings.json
+++ b/gestion_construccion.web/appsettings.json
@@ -17,8 +17,8 @@
     "Server": "smtp.gmail.com",
     "Port": 587,
     "SenderName": "Firmeza Construcción",
-    "SenderEmail": "TU_EMAIL_DE_GMAIL@gmail.com",
-    "Username": "TU_EMAIL_DE_GMAIL@gmail.com",
-    "Password": "TU_CONTRASEÑA_DE_APLICACION"
+    "SenderEmail": "allisonpauleth13@gmail.com",
+    "Username": "allisonpauleth13@gmail.com",
+    "Password": "qtqciitocmhgncmx"
   }
 }
