--- a/Firmeza.Infrastructure/Firmeza.Infrastructure.csproj
+++ b/Firmeza.Infrastructure/Firmeza.Infrastructure.csproj
@@ -9,6 +9,8 @@
   <ItemGroup>
     <PackageReference Include="EPPlus" Version="7.0.0" />
     <PackageReference Include="MailKit" Version="4.3.0" />
+    <PackageReference Include="SendGrid" Version="9.28.1" />
+    <PackageReference Include="iTextSharp" Version="5.5.13.4" />
     <PackageReference Include="Microsoft.AspNetCore.Identity.EntityFrameworkCore" Version="8.0.0" />
     <PackageReference Include="Microsoft.EntityFrameworkCore" Version="8.0.0" />
     <PackageReference Include="Microsoft.Extensions.Configuration.Abstractions" Version="8.0.0" />
