--- a/gestion_construcion.api/appsettings.json
+++ b/gestion_construcion.api/appsettings.json
@@ -13,5 +13,13 @@
     "Key": "ESTA_ES_MI_CLAVE_SECRETA_SUPER_LARGA_Y_COMPLEJA_PARA_FIRMAR_TOKENS_JWT_DEBE_TENER_AL_MENOS_32_CARACTERES",
     "Issuer": "FirmezaAPI",
     "Audience": "FirmezaClientes"
+  },
+  "SmtpSettings": {
+    "Server": "smtp.gmail.com",
+    "Port": 587,
+    "SenderName": "Firmeza Construcción",
+    "SenderEmail": "allisonpauleth13@gmail.com",
+    "Username": "allisonpauleth13@gmail.com",
+    "Password": "qtqciitocmhgncmx"
   }
 }
