--- a/gestion_construcion.api/Dockerfile
+++ b/gestion_construcion.api/Dockerfile
@@ -1,21 +1,19 @@
 ﻿FROM mcr.microsoft.com/dotnet/aspnet:8.0 AS base
-USER $APP_UID
 WORKDIR /app
 EXPOSE 8080
-EXPOSE 8081
 
 FROM mcr.microsoft.com/dotnet/sdk:8.0 AS build
-ARG BUILD_CONFIGURATION=Release
 WORKDIR /src
 COPY ["gestion_construcion.api/gestion_construcion.api.csproj", "gestion_construcion.api/"]
+COPY ["Firmeza.Core/Firmeza.Core.csproj", "Firmeza.Core/"]
+COPY ["Firmeza.Infrastructure/Firmeza.Infrastructure.csproj", "Firmeza.Infrastructure/"]
 RUN dotnet restore "gestion_construcion.api/gestion_construcion.api.csproj"
 COPY . .
 WORKDIR "/src/gestion_construcion.api"
-RUN dotnet build "./gestion_construcion.api.csproj" -c $BUILD_CONFIGURATION -o /app/build
+RUN dotnet build "gestion_construcion.api.csproj" -c Release -o /app/build
 
 FROM build AS publish
-ARG BUILD_CONFIGURATION=Release
-RUN dotnet publish "./gestion_construcion.api.csproj" -c $BUILD_CONFIGURATION -o /app/publish /p:UseAppHost=false
+RUN dotnet publish "gestion_construcion.api.csproj" -c Release -o /app/publish /p:UseAppHost=false
 
 FROM base AS final
 WORKDIR /app
