--- a/Firmeza.Tests/Firmeza.Tests.csproj
+++ b/Firmeza.Tests/Firmeza.Tests.csproj
@@ -4,27 +4,25 @@
     <TargetFramework>net8.0</TargetFramework>
     <ImplicitUsings>enable</ImplicitUsings>
     <Nullable>enable</Nullable>
-
     <IsPackable>false</IsPackable>
     <IsTestProject>true</IsTestProject>
   </PropertyGroup>
 
   <ItemGroup>
-    <PackageReference Include="Microsoft.NET.Test.Sdk" Version="17.6.0" />
+    <PackageReference Include="Microsoft.NET.Test.Sdk" Version="17.8.0" />
+    <PackageReference Include="xunit" Version="2.5.3" />
+    <PackageReference Include="xunit.runner.visualstudio" Version="2.5.3" />
+    <PackageReference Include="coverlet.collector" Version="6.0.0" />
     <PackageReference Include="Moq" Version="4.20.70" />
-    <PackageReference Include="xunit" Version="2.4.2" />
-    <PackageReference Include="xunit.runner.visualstudio" Version="2.4.5">
-      <IncludeAssets>runtime; build; native; contentfiles; analyzers; buildtransitive</IncludeAssets>
-      <PrivateAssets>all</PrivateAssets>
-    </PackageReference>
-    <PackageReference Include="coverlet.collector" Version="6.0.0">
-      <IncludeAssets>runtime; build; native; contentfiles; analyzers; buildtransitive</IncludeAssets>
-      <PrivateAssets>all</PrivateAssets>
-    </PackageReference>
+    <PackageReference Include="Microsoft.EntityFrameworkCore.InMemory" Version="8.0.0" />
+    <PackageReference Include="Microsoft.AspNetCore.Mvc.Testing" Version="8.0.0" /> <!-- Para pruebas de controladores MVC -->
+    <PackageReference Include="Microsoft.AspNetCore.Mvc.ViewFeatures" Version="2.2.0" /> <!-- Para ViewFeatures si es necesario -->
   </ItemGroup>
 
   <ItemGroup>
-    <ProjectReference Include="..\gestion_construccion.web\gestion_construccion.web.csproj" />
+    <ProjectReference Include="..\Firmeza.Core\Firmeza.Core.csproj" />
+    <ProjectReference Include="..\Firmeza.Infrastructure\Firmeza.Infrastructure.csproj" />
+    <ProjectReference Include="..\gestion_construccion.web\gestion_construccion.web.csproj" /> <!-- Referencia al proyecto web -->
   </ItemGroup>
 
 </Project>
