--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -1,9 +1,19 @@
-version: '3.8'
-
 services:
-  postgres_db:
-    image: postgres:15
-    container_name: firmeza_postgres
+  tests:
+    build:
+      context: .
+      dockerfile: Firmeza.Tests/Dockerfile
+    depends_on:
+      db:
+        condition: service_healthy
+    environment:
+      - ConnectionStrings__DefaultConnection=Host=db;Port=5432;Database=gestion_construccion;Username=postgres;Password=Qwe.123*
+    networks:
+      - app-network
+
+  db:
+    image: postgres:16-alpine
+    restart: always
     environment:
       POSTGRES_DB: gestion_construccion
       POSTGRES_USER: postgres
@@ -12,46 +22,77 @@ services:
       - "5432:5432"
     volumes:
       - postgres_data:/var/lib/postgresql/data
+    healthcheck:
+      test: ["CMD-SHELL", "pg_isready -U postgres -d gestion_construccion"]
+      interval: 5s
+      timeout: 5s
+      retries: 5
+    networks:
+      - app-network
 
-  mailhog:
-    image: mailhog/mailhog
-    container_name: firmeza_mailhog
-    ports:
-      - "1025:1025" # Puerto SMTP
-      - "8025:8025" # Interfaz web de MailHog
-
-  firmeza_web:
-    container_name: firmeza_webapp
+  api:
     build:
       context: .
-      dockerfile: gestion_construccion.web/Dockerfile # Asumiendo que el Dockerfile está en la carpeta del proyecto
+      dockerfile: gestion_construcion.api/Dockerfile
     ports:
-      - "8080:8080"
+      - "5165:8080" # Mapea el puerto 5165 del host al 8080 del contenedor
     environment:
-      - ConnectionStrings__DefaultConnection=Host=postgres_db;Database=gestion_construccion;Username=postgres;Password=Qwe.123*
-      - SmtpSettings__Server=mailhog
-      - SmtpSettings__Port=1025
-      - ASPNETCORE_URLS=http://+:8080
+      - ASPNETCORE_ENVIRONMENT=Development
+      - ConnectionStrings__DefaultConnection=Host=db;Port=5432;Database=gestion_construccion;Username=postgres;Password=Qwe.123*
+      - SmtpSettings__Server=smtp.gmail.com
+      - SmtpSettings__Port=587
+      - SmtpSettings__SenderName="Firmeza Construcción"
+      - SmtpSettings__SenderEmail=allisonpauleth13@gmail.com
+      - SmtpSettings__Username=allisonpauleth13@gmail.com
+      - SmtpSettings__Password=qtqciitocmhgncmx
+      - Jwt__Key=ESTA_ES_MI_CLAVE_SECRETA_SUPER_LARGA_Y_COMPLEJA_PARA_FIRMAR_TOKENS_JWT_DEBE_TENER_AL_MENOS_32_CARACTERES
+      - Jwt__Issuer=FirmezaAPI
+      - Jwt__Audience=FirmezaClientes
+      - Jwt__ExpireDays=1
     depends_on:
-      - postgres_db
-      - mailhog
+      db:
+        condition: service_healthy
+      tests:
+        condition: service_completed_successfully # Solo si las pruebas pasan
+    networks:
+      - app-network
 
-  firmeza_api:
-    container_name: firmeza_api
+  admin:
     build:
       context: .
-      dockerfile: gestion_construcion.api/Dockerfile # Asumiendo que el Dockerfile está en la carpeta del proyecto
+      dockerfile: gestion_construccion.web/Dockerfile
     ports:
-      - "8081:8081"
+      - "5031:8080" # Mapea el puerto 5031 del host al 8080 del contenedor
     environment:
-      - ConnectionStrings__DefaultConnection=Host=postgres_db;Database=gestion_construccion;Username=postgres;Password=Qwe.123*
-      - SmtpSettings__Server=mailhog
-      - SmtpSettings__Port=1025
-      - ASPNETCORE_URLS=http://+:8081
+      - ASPNETCORE_ENVIRONMENT=Development
+      - ConnectionStrings__DefaultConnection=Host=db;Port=5432;Database=gestion_construccion;Username=postgres;Password=Qwe.123*
+      - SmtpSettings__Server=smtp.gmail.com
+      - SmtpSettings__Port=587
+      - SmtpSettings__SenderName="Firmeza Construcción"
+      - SmtpSettings__SenderEmail=allisonpauleth13@gmail.com
+      - SmtpSettings__Username=allisonpauleth13@gmail.com
+      - SmtpSettings__Password=qtqciitocmhgncmx
     depends_on:
-      - postgres_db
-      - mailhog
+      api:
+        condition: service_healthy
+    networks:
+      - app-network
+
+  client:
+    build:
+      context: .
+      dockerfile: Firmeza.Client/Dockerfile
+    ports:
+      - "3000:80" # Mapea el puerto 3000 del host al 80 del contenedor Nginx
+    depends_on:
+      api:
+        condition: service_healthy
+    networks:
+      - app-network
+
+networks:
+  app-network:
+    driver: bridge
 
 volumes:
   postgres_data:
-```
