--- a/Firmeza.Tests/Dockerfile
+++ b/Firmeza.Tests/Dockerfile
@@ -2,24 +2,21 @@ FROM mcr.microsoft.com/dotnet/sdk:8.0 AS build
 
 WORKDIR /src
 
-# Copiar archivos de solución y proyectos para restaurar dependencias
-# Solo copiar los proyectos necesarios para Firmeza.Tests
+# Copiar archivos de proyecto para aprovechar la caché
 COPY ["Firmeza.Tests/Firmeza.Tests.csproj", "Firmeza.Tests/"]
 COPY ["Firmeza.Core/Firmeza.Core.csproj", "Firmeza.Core/"]
 COPY ["Firmeza.Infrastructure/Firmeza.Infrastructure.csproj", "Firmeza.Infrastructure/"]
+COPY ["gestion_construccion.web/gestion_construccion.web.csproj", "gestion_construccion.web/"]
 
-# Restaurar dependencias para la solución completa (o al menos para los proyectos referenciados)
-# Es mejor restaurar a nivel de solución si hay muchas referencias cruzadas
-# Para simplificar, restauramos solo el proyecto de pruebas y sus dependencias
+# Restaurar dependencias
 RUN dotnet restore "Firmeza.Tests/Firmeza.Tests.csproj"
 
-# Copiar el resto de los archivos del proyecto de pruebas
+# Copiar el resto del código
 COPY . .
 
-# Compilar el proyecto de pruebas (sin publicar)
+# Compilar
 WORKDIR /src/Firmeza.Tests
-RUN dotnet build "Firmeza.Tests.csproj" -c Debug
+RUN dotnet build "Firmeza.Tests.csproj" -c Debug --no-restore
 
-# Ejecutar las pruebas
-# Usamos el .csproj como argumento para dotnet test
+# El entrypoint ejecuta las pruebas y sale con el código de estado correspondiente
 ENTRYPOINT ["dotnet", "test", "Firmeza.Tests.csproj", "--no-build", "--verbosity", "normal"]
