--- a/gestion_construcion.api/appsettings.Development.json
+++ b/gestion_construcion.api/appsettings.Development.json
@@ -1,6 +1,6 @@
 {
   "ConnectionStrings": {
-    "DefaultConnection": "Host=127.0.0.1;Port=5432;Database=gestion_constructora;Username=postgres;Password=Qwe.123*"
+    "DefaultConnection": "Host=bdhsdf1lbborwhlfuy3f-postgresql.services.clever-cloud.com;Port=50013;Database=bdhsdf1lbborwhlfuy3f;Username=uhsm2ac08esf4xlemhov;Password=HrUhHJz0xvZvLPhUFztaWRT7PVW42E;SSL Mode=Require;Trust Server Certificate=true"
   },
   "Logging": {
     "LogLevel": {
