--- a/gestion_construccion.web/appsettings.json
+++ b/gestion_construccion.web/appsettings.json
@@ -1,6 +1,13 @@
 {
   "ConnectionStrings": {
-    "DefaultConnection": "Host=localhost;Database=gestion_construccion;Username=postgres;Password=Qwe.123*"
+    "DefaultConnection": "Host=localhost;Database=gestion_constructora;Username=postgres;Password=Qwe.123*"
+  },
+  "Storage": {
+    "Buckets": {
+      "Recibos": "recibos",
+      "Productos": "productos",
+      "Documentos": "documentos"
+    }
   },
   "Logging": {
     "LogLevel": {
