--- a/gestion_construcion.api/appsettings.json
+++ b/gestion_construcion.api/appsettings.json
@@ -1,6 +1,6 @@
 {
   "ConnectionStrings": {
-    "DefaultConnection": "Host=localhost;Database=gestion_construccion;Username=postgres;Password=Qwe.123*"
+    "DefaultConnection": "Host=db;Port=5432;Database=gestion_constructora;Username=postgres;Password=Qwe.123*"
   },
   "Logging": {
     "LogLevel": {
