--- a/gestion_construcion.api/appsettings.Development.json
+++ b/gestion_construcion.api/appsettings.Development.json
@@ -1,4 +1,7 @@
 {
+  "ConnectionStrings": {
+    "DefaultConnection": "Host=127.0.0.1;Port=5432;Database=gestion_constructora;Username=postgres;Password=Qwe.123*"
+  },
   "Logging": {
     "LogLevel": {
       "Default": "Information",
