--- a/gestion_construcion.api/appsettings.Development.json
+++ b/gestion_construcion.api/appsettings.Development.json
@@ -7,5 +7,6 @@
       "Default": "Information",
       "Microsoft.AspNetCore": "Warning"
     }
-  }
+  },
+  "GeminiApiKey": "AIzaSyA5YoL7c4TVe8yfwsSD_mhkp9br_Ke-3cE"
 }
