--- a/gestion_construcion.api/appsettings.json
+++ b/gestion_construcion.api/appsettings.json
@@ -21,5 +21,6 @@
     "SenderEmail": "allisonpauleth13@gmail.com",
     "Username": "allisonpauleth13@gmail.com",
     "Password": "qtqciitocmhgncmx"
-  }
+  },
+  "GeminiApiKey": "AIzaSyA5YoL7c4TVe8yfwsSD_mhkp9br_Ke-3cE"
 }
