--- a/gestion_construccion.web/appsettings.Development.json
+++ b/gestion_construccion.web/appsettings.Development.json
@@ -1,6 +1,6 @@
 {
   "ConnectionStrings": {
-    "DefaultConnection": "Host=bdhsdf1lbborwhlfuy3f-postgresql.services.clever-cloud.com;Port=50013;Database=bdhsdf1lbborwhlfuy3f;Username=uhsm2ac08esf4xlemhov;Password=HrUhHJz0xvZvLPhUFztaWRT7PVW42E;SSL Mode=Require;Trust Server Certificate=true"
+    "DefaultConnection": "Host=bdhsdf1lbborwhlfuy3f-postgresql.services.clever-cloud.com;Port=50013;Database=bdhsdf1lbborwhlfuy3f;Username=uhsm2ac08esf4xlemhov;Password=HrUhHJz0xvZvLPhUFztaWRT7PVW42E;SSL Mode=Require;Trust Server Certificate=true;Pooling=false"
   },
   "Logging": {
     "LogLevel": {
