--- a/gestion_construccion.web/gestion_construccion.web.csproj
+++ b/gestion_construccion.web/gestion_construccion.web.csproj
@@ -6,6 +6,9 @@
         <ImplicitUsings>enable</ImplicitUsings>
         <DockerDefaultTargetOS>Linux</DockerDefaultTargetOS>
     </PropertyGroup>
+    <PropertyGroup>
+        <RuntimeIdentifier>linux-x64</RuntimeIdentifier>
+    </PropertyGroup>
 
     <ItemGroup>
       <Content Include="..\.dockerignore">
